[package]
name = "async-rustbus"
version = "0.1.0"
authors = ["Curtis Maves <curtis@maves.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
# rustbus = "0.12.0"
rustbus = { git = "https://github.com/KillingSpark/rustbus.git", branch = "master" }
async-std = {version = "1.9.0", features =  ["unstable", "attributes"] }
async-io = "1.3.1"
arrayvec = "0.7.0"
futures = "0.3.13"
xml-rs = "0.8"

[dev-dependencies]
rand = { version = "0.8", features = ["small_rng"] }
