[package]
name = "async-rustbus"
version = "0.1.2"
authors = ["Curtis Maves <curtis@maves.io>"]
edition = "2018"
license = "MIT"
description = "An asynchronous implementation of the DBus protocol based on rustbus"
homepage = "https://github.com/cmaves/async-rustbus"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
rustbus = "0.17.0"
async-std = {version = "1.9.0", features =  ["unstable", "attributes"] }
async-io = "1.3.1"
arrayvec = "0.7.0"
futures = "0.3.13"
xml-rs = "0.8"

[dev-dependencies]
rand = { version = "0.8", features = ["small_rng"] }
